<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I\'m Free</string>
    <string name="actionbar_title">I\'m Free</string>
    <string name="default_name">John Doe</string>
    <string name="default_timeSlot">Free from 1:00 AM to 6:00 AM</string>
    <string name="default_location">At the CSL</string>
    <string name="illHang_text">I\'ll Hang</string>

    <!-- MenuItem titles -->
    <string name="login">Login</string>
    <string name="username_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_checkbox">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_sign_up">Sign In With Facebook</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">I\'m Free</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_im_free">Set Availability</string>
    <string name="whos_free">See Who\'s Free</string>
    <string name="whosFree_noLocation">[No Location Data]</string>
    <string name="where">Where?</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="free_until">Free Until</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menuTitle_logout">Logout</string>
    <string name="menuTitle_imfree">Post</string>
    <string name="menuTitle_whosfree">View Posts</string>
    <string name="illHang_sent">The user has been notified that you\'re on the way.</string>
    <string name="reset_confirm">Reset</string>
    <string name="reset_cancel">Cancel</string>
    <string name="reset_sent">Check your e-mail for reset instructions.</string>
    <string name="reset_genericError">Reset error. Please try again.</string>
    <string name="reset_emailNotFound">It looks like you aren\'t registered. Are you sure you provided the correct E-mail address?</string>
    <string name="friendReq_accept">Accept</string>
    <string name="friendReq_decline">Decline</string>

    <color name="loginBase">#006064</color>
    <color name="loginLight">#01939A</color>
    <color name="black">#000</color>
    <color name="white">#FFF</color>
    <color name="green">#05A100</color>
    <color name="yellow">#F2FF00</color>
    <color name="buttonBase">#005C99</color>
    <color name="buttonLight">#0080FF</color>
    <color name="buttonStroke">#009999</color>
    <color name="buttonPressed">#005C99</color>
    <color name="buttonText">#FFFFFF</color>
    <color name="mainBase">#34C6CD</color>
    <color name="mainLight">#5DC8CD</color>
    <color name="postBase">#2E16B1</color>
    <color name="postLight">#604BD8</color>
    <color name="postPressed">#3B2E84</color>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_content">I\'m Free</string>
    <string name="imFree_defaultActiveLocation">No location specified.</string>
    <string name="imFree_gpsNote">Enable GPS if you would like your friends to see your location on a map.</string>
    <string name="whosFree_back">Back</string>
    <string name="whosFree_addFriendHint">Add Friend (Email)</string>
    <string name="whosFree_viewRequests">Friend Requests</string>
    <string name="title_activity_friend_requests">FriendRequestsActivity</string>
    <string name="title_activity_im_free_application">ImFreeApplication</string>
    <string name="whosFree_viewAllToggle">View All</string>
    <string name="whosFree_viewActiveToggle">View Active</string>
    <string name="whosFree_addFriend">Add Friend</string>
    <string name="whosFree_friendReqSent">Your friend request has been sent.</string>
    <string name="whosFree_longClickDel">Long click to delete a friend.</string>
    <string name="signUp_notAllFieldsFilledIn">Please fill in all fields</string>
    <string name="signUp_enterValidEmail">Please Enter a Valid Email Address</string>
    <string name="friendRequest_done">Done</string>
    <string name="close">Close</string>

</resources>
