<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <Button
        android:id="@+id/signUpConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpPasswordEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/signUpPasswordEditText"
        android:layout_marginBottom="17dp"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/sign_up_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/signUpNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpEmailEditText"
        android:layout_alignTop="@+id/signUpTextView"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="@string/name">
        <requestFocus />
    </EditText>
        
        

    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpPasswordEditText"
        android:layout_below="@+id/signUpNameEditText"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" >

    </EditText>

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpEmailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

</RelativeLayout>
